; ModuleID = '/home/carl/AnghaBench/lede/package/lean/ipset-lists/tools/extr_ipv4_merger.c_ipv4_range_swap.c'
source_filename = "/home/carl/AnghaBench/lede/package/lean/ipset-lists/tools/extr_ipv4_merger.c_ipv4_range_swap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipv4_range = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32)* @ipv4_range_swap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipv4_range_swap(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.ipv4_range*, align 8
  %8 = alloca %struct.ipv4_range*, align 8
  %9 = alloca %struct.ipv4_range, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.ipv4_range*
  store %struct.ipv4_range* %11, %struct.ipv4_range** %7, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to %struct.ipv4_range*
  store %struct.ipv4_range* %13, %struct.ipv4_range** %8, align 8
  %14 = load %struct.ipv4_range*, %struct.ipv4_range** %7, align 8
  %15 = bitcast %struct.ipv4_range* %9 to i8*
  %16 = bitcast %struct.ipv4_range* %14 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %15, i8* align 4 %16, i64 4, i1 false)
  %17 = load %struct.ipv4_range*, %struct.ipv4_range** %7, align 8
  %18 = load %struct.ipv4_range*, %struct.ipv4_range** %8, align 8
  %19 = bitcast %struct.ipv4_range* %17 to i8*
  %20 = bitcast %struct.ipv4_range* %18 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %19, i8* align 4 %20, i64 4, i1 false)
  %21 = load %struct.ipv4_range*, %struct.ipv4_range** %8, align 8
  %22 = bitcast %struct.ipv4_range* %21 to i8*
  %23 = bitcast %struct.ipv4_range* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %22, i8* align 4 %23, i64 4, i1 false)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
